--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ commonsLangVersion = "3.14.0"
 configlibVersion = "4.6.1"
 minedownAdventureVersion = "1.7.2-SNAPSHOT"
 drinkVersion = "1.5.3"
-entityLibVersion = "master-d9aae45571d0536107860d66c37318dc63311e77"
+entityLibVersion = "2.4.11"
 packeteventsSpigotVersion = "2.10.0-SNAPSHOT"
 universalSchedulerVersion = "0.1.6"
 viaVersionApiVersion = "5.0.1"
