--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: UnlimitedNametags
-        path: target/*.jar
+        path: build/libs/*.jar
