--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ itemsAdderVersion = "3.6.1"
 gsonVersion = "2.11.0"
 creative-rp = "1.9.2-SNAPSHOT"
 creative-serializer = "1.9.2-SNAPSHOT"
-libs-disguises = "v11.0.0"
+libs-disguises = "11.0.0"
 featherVersion = "0.0.5"
 labymodVersion = "1.0.6"
 hmcCosmetics = "2.8.2-fed13b8e"
